Fix screen error on iPhone 7 plus

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -121,7 +121,7 @@ body{
     background: #c8eea4;
     background-image: url('../../src/images/optimized/tinified/background.png');
     background-position: bottom;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
     display: flex;
